# move-semantics

./: CMakeCache.txt  CMakeLists.txt  Int.h  Makefile  cmake_install.cmake  main.cpp  readme.md  track  trackerlog.html
Tracker/: CMakeLists.txt  Console.cpp  Makefile  Text.cpp  Tracker.cpp  cmake_install.cmake
Tracker/core/: Console.cpp  Dot.cpp  Html.cpp  Text.cpp  Tracker.cpp
Tracker/includes/: Tracker.h
Tracker/internal/: Colors.h
Tracker/misc/: Colors.cpp
dotfiles/: trackedlog.dot  trackerlog.links.dot  trackerlog.nodes.dot
